--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -40,8 +40,9 @@
 			<div class="foods" id="{{id}}">
 				<h3>{{food_name}}</h3>
 				<div class="image_and_like">
-					<a href="#"><button type="button" class="btn btn-danger eraseFromMyUploads"><span class="glyphicon glyphicon-minus"></span></button></a>
+					<a href="#"><button type="button" class="btn btn-danger eraseFromMyUploads"><span class="glyphicon glyphicon-remove"> Delete</span></button></a>
 					<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+					<p>{{description}}</p>
       			</div>
 				<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 					<div class="modal-dialog">
@@ -75,7 +76,6 @@
       					</div>
 	   				</div>
 				</div>
-				<p>{{description}}</p>
 			</div>
 			{{/each}}
 			{{else}}
@@ -84,7 +84,52 @@
 		</div>
 
 		<div class="tab-pane myLikedFoods">
+			{{#if showLiked}}
+				{{#each allLikedFoods}}
+				<div class="foods" id="{{id}}">
+				<h3>{{food_name}}</h3>
+				<div class="image_and_like">
+					<a href="#"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-minus"> Unlike</span></button></a>
+					<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
+					<p>{{description}}</p>
+      			</div>
+				<div class="modal fade" id="modal_{{id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h2 class="modal-title" id="myModalLabel">{{food_name}}</h2>
+						</div>
+						<div class="modal-body">
+							<div class="image_and_comments">
+							<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded">
+							<div class="comments">
+								<h4>Comments: </h4>
+								{{#each comments}}
+								<p>{{comment_usr_id}} said "{{comment}}"</p>
+								{{/each}}
+
+								<div class="addComment">
+									<form id="addCommentForm" role="form" method="get">
+						    			<div class="form-group">
+	    									<input type="text" class="form-control" id="comment" placeholder="add comments" name="comment">
+	    								</div>
+	    								<input type="submit" class="btn btn-default addCommentBtn" value="Add Comment"></input>
+									</form>
+								</div>
+							</div>
+							</div>
+							<h3>{{tags}} <a href="#">get recipe</a></h3>
+						</div>
+						<div class="modal-footer">
+        					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      					</div>
+	   				</div>
+				</div>
+			</div>
+				{{/each}}
+			{{else}}
 			<h5>You have not liked anything yet!</h5>
+			{{/if}}
 		</div>
 	</div>
 
