--- a/views/myFavs.handlebars
+++ b/views/myFavs.handlebars
@@ -86,10 +86,10 @@
 		<div class="tab-pane myLikedFoods">
 			{{#if showLiked}}
 				{{#each allLikedFoods}}
-				<div class="foods" id="{{id}}">
+				<div class="foods likedFood" id="{{id}}">
 				<h3>{{food_name}}</h3>
 				<div class="image_and_like">
-					<a href="#"><button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-minus"> Unlike</span></button></a>
+					<a href="#"><button type="button" class="btn btn-danger unlike"><span class="glyphicon glyphicon-minus"> Unlike</span></button></a>
 					<img src="{{imageFile}}" alt="Food Photos" class="img img-rounded hand" data-toggle="modal" data-target="#modal_{{id}}">
 					<p>{{description}}</p>
       			</div>
@@ -139,15 +139,5 @@
 	<script type="text/javascript" src="../js/search/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="../js/search/jquery.autocomplete.js"></script>
     <script type="text/javascript" src="../js/search/foods.js"></script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-48516049-2', 'foodbytes.herokuapp.com');
-  ga('send', 'pageview');
-
-</script>
 </body>
 </html>
